--- a/.travis.yml
+++ b/.travis.yml
@@ -3,23 +3,23 @@ services:
   - docker
 
 before_install:
-  - docker build -t zhelazny/react-test -f ./frontend/Dockerfile.dev ./frontend
+  - docker build -t zhelazny/udemy-dkcg-react-test -f ./frontend/Dockerfile.dev ./frontend
 
 script:
-  - docker run zhelazny/react-test npm test -- --coverage
+  - docker run zhelazny/udemy-dkcg-react-test npm test -- --coverage
 
 after_success:
-  - docker build -t zhelazny/multi-frontend ./frontend
-  - docker build -t zhelazny/multi-nginx ./nginx
-  - docker build -t zhelazny/multi-api ./api
-  - docker build -t zhelazny/multi-worker ./worker
+  - docker build -t zhelazny/udemy-dkcg-multi-frontend ./frontend
+  - docker build -t zhelazny/udemy-dkcg-multi-nginx ./nginx
+  - docker build -t zhelazny/udemy-dkcg-multi-api ./api
+  - docker build -t zhelazny/udemy-dkcg-multi-worker ./worker
   # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
-  - docker push zhelazny/multi-frontend
-  - docker push zhelazny/multi-nginx
-  - docker push zhelazny/multi-api
-  - docker push zhelazny/multi-worker
+  - docker push zhelazny/udemy-dkcg-multi-frontend
+  - docker push zhelazny/udemy-dkcg-multi-nginx
+  - docker push zhelazny/udemy-dkcg-multi-api
+  - docker push zhelazny/udemy-dkcg-multi-worker
 
 deploy:
   provider: elasticbeanstalk
