[feature] frontend changes

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ services:
   - docker
 
 before_install:
-  - docker build -t zhelazny/udemy-dkcg-react-test -f ./frontend/Dockerfile.dev ./frontend
+  - docker build -t zhelazny/udemy-dkcg-frontend-dev -f ./frontend/Dockerfile.dev ./frontend
 
 script:
-  - docker run zhelazny/udemy-dkcg-react-test npm test -- --coverage
+  - docker run zhelazny/udemy-dkcg-frontend-dev npm test -- --coverage
 
 after_success:
   - docker build -t zhelazny/udemy-dkcg-multi-frontend ./frontend
@@ -21,15 +21,15 @@ after_success:
   - docker push zhelazny/udemy-dkcg-multi-api
   - docker push zhelazny/udemy-dkcg-multi-worker
 
-deploy:
-  provider: elasticbeanstalk
-  region: us-west-1
-  app: multi-docker
-  env: MultiDocker-env
-  bucket_name: elasticbeanstalk-us-west-1-306476627547
-  bucket_path: docker-multi
-  on:
-    branch: master
-  access_key_id: $AWS_ACCESS_KEY
-  secret_access_key:
-    secure: $AWS_SECRET_KEY
+# deploy:
+#   provider: elasticbeanstalk
+#   region: us-west-1
+#   app: multi-docker
+#   env: MultiDocker-env
+#   bucket_name: elasticbeanstalk-us-west-1-306476627547
+#   bucket_path: docker-multi
+#   on:
+#     branch: master
+#   access_key_id: $AWS_ACCESS_KEY
+#   secret_access_key:
+#     secure: $AWS_SECRET_KEY
