--- a/api/package.json
+++ b/api/package.json
@@ -1,14 +1,14 @@
 {
     "dependencies": {
-      "express": "4.16.3",
-      "pg": "7.4.3",
-      "redis": "2.8.0",
-      "cors": "2.8.4",
-      "nodemon": "1.18.3",
-      "body-parser": "*"
+        "body-parser": "*",
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "nodemon": "^2.0.14",
+        "pg": "^8.7.1",
+        "redis": "^3.1.2"
     },
     "scripts": {
-      "dev": "nodemon",
-      "start": "node index.js"
+        "dev": "nodemon",
+        "start": "node index.js"
     }
-  }
+}
